[project]
name = "argobeast"
version = "2.1.2"
description = "A Python-based test automation framework for Behave with a clean Page Object architecture and CLI scaffolding."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Paul Shears", email = "paul.s@argodevops.co.uk" }
]

# Your dependencies for the framework itself (not test requirements)
dependencies = [
    "selenium>=4.0",
    "PyYAML>=6.0",
    "deepmerge>=1.0",
    "python-dotenv>=1.0",
    "behave>=1.2",
]

# Entry point for CLI
[project.scripts]
argobeast = "argo_beast.cli.main:main"

# Setuptools settings
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # IMPORTANT for src/ layout

# Include non-Python files inside the package
[tool.setuptools.package-data]
"argo_beast" = ["**/*.yml"]

# Automatically include all packages under src/
[tool.setuptools.packages.find]
where = ["src"]

# Include options dependencies for Sphinx documentation
[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "myst_parser" 
]
allure = [
    "allure-behave"
]

[tool.uv]
dev-dependencies = [
    "pytest==9.0.3",
    "build",  # The standard PEP 517 build frontend
    "twine",  # For uploading to PyPI
    "argobeast[allure]", # For pytests to run correctly
]