[project]
name = "argobeast"
version = "2.2.4b1"
description = "A Python-based test automation framework for Behave with a clean Page Object architecture and CLI scaffolding."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Paul Shears", email = "paul.s@argodevops.co.uk" }
]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]

# Your dependencies for the framework itself (not test requirements)
dependencies = [
    "selenium>=4.0",
    "PyYAML>=6.0",
    "deepmerge>=1.0",
    "python-dotenv>=1.0",
    "behave>=1.2",
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "myst-parser>=4.0.1",
    "sphinx-design>=0.6.1",
    "build>=1.4.3",
]

# Entry point for CLI
[project.scripts]
argobeast = "argo_beast.cli.main:main"

[project.urls]
Documentation = "https://pauls-argo.github.io/ArgoBEAST-Documentation/"

# Setuptools settings
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}  # IMPORTANT for src/ layout

# Include non-Python files inside the package
[tool.setuptools.package-data]
"argo_beast" = ["**/*.yml"]

# Automatically include all packages under src/
[tool.setuptools.packages.find]
where = ["src"]

# Include options dependencies for Sphinx documentation
[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "myst_parser" 
]
allure = [
    "allure-behave"
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pylint",
    "ruff",
    "build",  # The standard PEP 517 build frontend
    "twine",  # For uploading to PyPI
    "argobeast[allure]", # For pytests to run correctly
]

[tool.pylint.messages_control]
# Disable nitpicky rules that often clash with testing frameworks
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods (common in Page Objects)
    "W0511", # fixme (allow TODOs),
    "W0718",
    "W1203", # logging-fstring-interpolation
]

[tool.pylint.format]
max-line-length = 120  # More generous than the default 100

[tool.pylint.master]
fail-under = 10.0 # Force a perfect score on your filtered rules
